# django-admin-toolkit

./: .gitignore  .pre-commit-config.yaml  .python-version  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  db.sqlite3  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_test.in  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: actions.yml
admin_toolkit/: admin.py  admin_filters.py  admin_mixins.py  apps.py  widgets.py
admin_toolkit/static/css/: admin_buttons.css  admin_floating.css
admin_toolkit/static/js/: admin_floating.js
admin_toolkit/templates/admin/: change_list_floating_filter.html  change_list_with_extrabuttons.html  filter_select.html
django_admin_toolkit/: admin_mixins.py  apps.py  urls.py
django_admin_toolkit/templates/admin/: change_list_with_extrabuttons.html
django_admin_utils/: admin_mixins.py  apps.py  urls.py  widgets.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: README.md  settings.py  test_models.py  urls.py
tests/example/: admin.py  admin_filters.py  apps.py  factories.py  managers.py  models.py  querysets.py  urls.py
tests/example/factories/: __init__.py  after_save_admin_mixin_factories.py  all_readonly_admin_mixin_factories.py  base_admin_mixin_factories.py  configurable_widgets_admin_mixin_factories.py  detail_in_inline_admin_mixin_factories.py
tests/example/migrations/: 0001_initial.py  0002_baseadminexample.py  0002_examplemodelforaftersaveadminmixin.py  0003_auto_20210422_1700.py
tests/example/models/: __init__.py  admin_filters_example_model.py  after_save_admin_mixin_models.py  all_readonly_admin_inline_mixin_models.py  base_admin_mixin_models.py  configurable_widgets_admin_mixin_models.py  (+5 more)
(+14 files in other folders)
