[wheel]
universal = 1

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    ./node_modules/*,
    */migrations/*,
    ./docs/*,
ignore = E501,T499,W503,D104, D105, D101, D100, E203, E501, W503, F401, D103, F403, D102, B950, B008, D412
max-line-length = 120
mypy_config = setup.cfg
select = B,C,D,E,F,I,W,T4,B9

[zest.releaser]
python-file-with-version = admin_toolkit/__init__.py

[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
source = .

[tool.black]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    */node_modules/*,

[metadata]
license-file = LICENSE.md

[mypy]
ignore_missing_imports=True
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    .fh_app_template/*,
    */node_modules/*,
    */docs/*,

[tool.isort]
line_length=120
combine_as_imports = true
default_section = "THIRDPARTY"
known_third_party = "django"
profile = "black"
skip =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    node_modules,
    */migrations/*,
    .fh_app_template/*,
    */node_modules/*,

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[testenv:report]
commands = coverage report
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage~=5.3.0

[tox:tox]
envlist = coverage
skipsdist = True
